--- a/html/apropos.html
+++ b/html/apropos.html
@@ -12,27 +12,27 @@
 
 <body>
 
-    <header >
-        <a href="#"><img class="iconepricibale" src="../img/chef (1).png" alt="Logo du site"></a>
+    <header>
+        <a href="../index.html"><img class="iconepricibale" src="../img/chef (1).png" alt="Logo du site"></a>
         <img src="../img/mode-sombre.png" alt="mode sombre" id="icon" class="">
-        <h1 >À propos de Tasty Tom</h1>
-        <p >Bienvenue dans l'univers des saveurs maison !</p>
+        <h1>À propos de Tasty Tom</h1>
+        <p>Bienvenue dans l'univers des saveurs maison !</p>
         <input aria-label="Recherche" autocomplete="off" placeholder="Rechercher..."
             class="form-control mb-3 w-50 mx-auto" name="query" type="text">
-            <ul class="nav nav-pills nav-fill gap-2 p-1 small rounded-5 shadow custom-nav" id="pillNav2" role="tablist">
-                <li class="nav-item" role="presentation">
-                    <a href="index.html" class="nav-link active rounded-5 text-light" id="home-tab2"
-                        role="tab" aria-selected="true">Home</a>
-                </li>
-                <li class="nav-item" role="presentation">
-                    <a href="./html/apropos.html" class="nav-link rounded-5 text-light" id="profile-tab2" role="tab"
-                        aria-selected="false">Profile</a>
-                </li>
-                <li class="nav-item" role="presentation">
-                    <a href="./html/contact.html" class="nav-link rounded-5 text-light" id="contact-tab2" role="tab"
-                        aria-selected="false">Contact</a>
-                </li>
-            </ul>
+        <ul class="nav nav-pills nav-fill gap-2 p-1 small rounded-5 shadow custom-nav" id="pillNav2" role="tablist">
+            <li class="nav-item" role="presentation">
+                <a href="../index.html" class="nav-link active rounded-5 text-light" id="home-tab2" role="tab"
+                    aria-selected="true">Home</a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a href="apropos.html" class="nav-link rounded-5 text-light" id="profile-tab2" role="tab"
+                    aria-selected="false">Profile</a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a href="contact.html" class="nav-link rounded-5 text-light" id="contact-tab2" role="tab"
+                    aria-selected="false">Contact</a>
+            </li>
+        </ul>
     </header>
 
     <!-- Section "À propos" -->
