--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             class="form-control mb-3 w-50 mx-auto fade-in-slide-up" name="query" type="text">
         <ul class="nav nav-pills nav-fill gap-2 p-1 small rounded-5 shadow custom-nav" id="pillNav2" role="tablist">
             <li class="nav-item" role="presentation">
-                <a href="index.html" class="nav-link active rounded-5 text-light" id="home-tab2"
-                    role="tab" aria-selected="true">Home</a>
+                <a href="index.html" class="nav-link active rounded-5 text-light" id="home-tab2" role="tab"
+                    aria-selected="true">Home</a>
             </li>
             <li class="nav-item" role="presentation">
                 <a href="./html/apropos.html" class="nav-link rounded-5 text-light" id="profile-tab2" role="tab"
@@ -51,8 +51,8 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card fade-in-slide-up">
-                    <a href="recettes/recette1.html">
-                        <img src="./img/cookies.jpg" class="card-img-top" alt="Recette Cookies">
+                    <a href="recettes/recette2.html">
+                        <img src="./img/gateaux_cafe.jpg" class="card-img-top" alt="Recette Cookies">
                         <div class="card-body">
                             <h5 class="card-title">Cookies au chocolat</h5>
                             <p class="card-text">Des cookies fondants et riches en chocolat noir et pépites
