--- a/recettes/recette2.html
+++ b/recettes/recette2.html
@@ -14,7 +14,7 @@
     <header>
         <a href="#"><img class="iconepricibale" src="../img/chef (1).png" alt="Logo du site"></a>
         <img src="../img/mode-sombre.png" alt="mode sombre" id="icon" class="">
-        <h1>Cookies au Chocolat !</h1>
+        <h1>Cookies au Café !</h1>
         <p>Découvrez des recettes faciles et rapides pour tous les goûts !</p>
         <input aria-label="Recherche" autocomplete="off" placeholder="Rechercher..."
             class="form-control mb-3 w-50 mx-auto " name="query" type="text">
@@ -37,7 +37,7 @@
     <section class="recette container recette-detail py-4">
         <div class="row">
             <div class="col-md-6 text-center">
-                <img src="../img/cookies.jpg" alt="Image de la recette" class="img-fluid rounded shadow-sm mb-3">
+                <img src="../img/gateaux_cafe.jpg" alt="Image de la recette" class="img-fluid rounded shadow-sm mb-3">
             </div>
             <div class="col-md-6">
                 <h2 class="h4">Ingrédients :</h2>
