--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <a href="recettes/recette2.html">
                         <img src="./img/gateaux_cafe.jpg" class="card-img-top" alt="Recette Cookies">
                         <div class="card-body">
-                            <h5 class="card-title">Cookies au chocolat</h5>
+                            <h5 class="card-title">Gâteau au café et aux noix</h5>
                             <p class="card-text">Des cookies fondants et riches en chocolat noir et pépites
                                 croustillantes.</p>
                         </div>
