--- a/recettes/recette2.html
+++ b/recettes/recette2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cookies au Chocolat</title>
+    <title>Gâteau au café et aux noix</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../img/chef.ico" type="image/x-icon">
@@ -12,9 +12,9 @@
 
 <body>
     <header>
-        <a href="#"><img class="iconepricibale" src="../img/chef (1).png" alt="Logo du site"></a>
+        <a href="../index.html"><img class="iconepricibale" src="../img/chef (1).png" alt="Logo du site"></a>
         <img src="../img/mode-sombre.png" alt="mode sombre" id="icon" class="">
-        <h1>Cookies au Café !</h1>
+        <h1>Gâteau au café et aux noix</h1>
         <p>Découvrez des recettes faciles et rapides pour tous les goûts !</p>
         <input aria-label="Recherche" autocomplete="off" placeholder="Rechercher..."
             class="form-control mb-3 w-50 mx-auto " name="query" type="text">
@@ -42,35 +42,58 @@
             <div class="col-md-6">
                 <h2 class="h4">Ingrédients :</h2>
                 <ul class="list-group list-group-flush mb-4">
-                    <li class="list-group-item">• 125g de beurre mou</li>
-                    <li class="list-group-item">• 100g de sucre brun</li>
-                    <li class="list-group-item">• 50g de sucre blanc</li>
-                    <li class="list-group-item">• 1 œuf</li>
-                    <li class="list-group-item">• 1 cuillère à café d’extrait de vanille</li>
-                    <li class="list-group-item">• 175g de farine</li>
-                    <li class="list-group-item">• 1/2 cuillère à café de levure chimique</li>
-                    <li class="list-group-item">• 1/4 cuillère à café de bicarbonate de soude</li>
+                    <li class="list-group-item">• 115g de margarine molle</li>
+                    <li class="list-group-item">• 115g de sucre en poudre</li>
+                    <li class="list-group-item">• 60g de noix hachées</li>
+                    <li class="list-group-item">• 2 gros œufs</li>
+                    <li class="list-group-item">• 1 cuillère à soupe d’essence de café</li>
+                    <li class="list-group-item">• 115g de farine</li>
+                    <li class="list-group-item">• Une cuillère à café de levure chimique</li>
                     <li class="list-group-item">• Une pincée de sel</li>
-                    <li class="list-group-item">• 100g de pépites de chocolat (ou plus selon tes préférences)</li>
+                </ul>
+                <h2 class="h4">Garniture :</h2>
+                <ul class="list-group list-group-flush mb-4">
+                    <li class="list-group-item">• 85 g de margarine molle</li>
+                    <li class="list-group-item">• 225g de sucre glace</li>
+                    <li class="list-group-item">• Noix entières pour décorer</li>
+                    <li class="list-group-item">• 2 cuillères à café d'essence de café</li>
+                    <li class="list-group-item">• 2 cuillères à café de lait</li>
                 </ul>
 
                 <h2 class="h4">Instructions :</h2>
                 <ol class="list-group list-group-numbered">
-                    <li class="list-group-item">Préchauffe ton four à 180°C (chaleur tournante).</li>
-                    <li class="list-group-item">Dans un grand bol, mélange le beurre, le sucre brun et le sucre blanc
-                        jusqu’à obtenir une consistance crémeuse.</li>
-                    <li class="list-group-item">Ajoute l’œuf et l’extrait de vanille, et mélange bien.</li>
-                    <li class="list-group-item">Dans un autre bol, combine la farine, la levure chimique, le bicarbonate
-                        de soude et le sel. Incorpore ces ingrédients secs au mélange humide.</li>
-                    <li class="list-group-item">Ajoute les pépites de chocolat et mélange jusqu’à ce qu’elles soient
-                        bien réparties.</li>
-                    <li class="list-group-item">Dépose des cuillerées de pâte sur une plaque de cuisson recouverte de
-                        papier sulfurisé, en laissant suffisamment d’espace entre chaque cookie.</li>
-                    <li class="list-group-item">Enfourne pendant environ 10-12 minutes, ou jusqu’à ce que les bords
-                        soient dorés mais que le centre soit encore légèrement mou.</li>
-                    <li class="list-group-item">Laisse les cookies refroidir quelques minutes sur la plaque avant de les
-                        transférer sur une grille pour refroidir complètement.</li>
+                    <li class="list-group-item">Graisser deux moules à gâteau de 18 cm de diamètre et tapisser les fonds
+                        de papier sulfurisé beurré.</li>
+                    <li class="list-group-item">Dans un bol, mettre la margarine, le sucre, les œufs, les noix hachées
+                        et l'essence de café. Tamiser la farine, le sel et la levure chimique par-dessus. Mélanger tous
+                        les ingrédients avec une cuillère en bois pendant 2-3 minutes jusqu'à ce que la préparation soit
+                        bien homogène.</li>
+                    <li class="list-group-item">Diviser la pâte dans les moules préparés, lisser la surface, puis
+                        cuire au centre du four préchauffé à 160°C (thermostat 3) pendant 35-40 minutes, ou jusqu'à ce
+                        que le gâteau soit bien gonflé et rebondisse au toucher.</li>
+                    <li class="list-group-item">Une fois cuits, démouler les gâteaux sur une grille et laisser refroidir
+                        avant de retirer le papier sulfurisé.</li>
+                    <li class="list-group-item">Pendant ce temps, préparer la garniture : battre la margarine, le sucre
+                        glace tamisé, le lait et l'essence de café dans un bol jusqu'à ce que la préparation soit lisse.
+                    </li>
+                    <li class="list-group-item">Coller les deux gâteaux ensemble avec les deux tiers de la garniture.
+                        Recouvrir le dessus du gâteau avec le reste de la garniture et décorer en traçant un motif
+                        décoratif avec une fourchette. Ajouter les noix entières sur le dessus.</li>
                 </ol>
+
+                <h2 class="h4">Conseils :</h2>
+                <ul class="list-group list-group-flush mb-4">
+                    <li class="list-group-item">• Utilisez des noix de qualité pour un goût encore plus savoureux.</li>
+                    <li class="list-group-item">• Vous pouvez ajouter des pépites de chocolat pour plus de gourmandise.
+                    </li>
+                    <li class="list-group-item">• Veillez à bien ne pas trop cuire les gâteaux, sinon ils risquent
+                        d'être secs.</li>
+                    <li class="list-group-item">• Laissez bien refroidir les gâteaux avant de les garnir pour que la
+                        crème ne fonde pas.</li>
+                    <li class="list-group-item">• Si vous n'avez pas d'essence de café, vous pouvez la remplacer par du
+                        café instantané bien fort.</li>
+                </ul>
+
             </div>
         </div>
     </section>
