--- a/index.html
+++ b/index.html
@@ -4,141 +4,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Les recettes de Tasty Tom</title>
+    <title>Site en travaux - Tasty Tom</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./img/chef.ico" type="image/x-icon">
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            text-align: center;
+            background-color: #f8f9fa;
+        }
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+        }
+        p {
+            font-size: 1.2rem;
+            color: #6c757d;
+        }
+        .spinner-border {
+            display: flex;
+            width: 5rem;
+            height: 5rem;
+            margin: 1.5rem auto;
+            align-items: center;
+        }
+        .content {
+            max-width: 400px;
+        }
+    </style>
 </head>
 
 <body>
-    <header class="fade-in-slide-up text-center mb-4">
-        <a href="#"><img class="iconepricibale" src="./img/chef (1).png" alt="Logo du site"></a>
-        <img src="./img/mode-sombre.png" alt="mode sombre" id="icon" class="mb-2 fade-in">
-        <h1 class="fade-in-slide-up">Bienvenue sur Tasty Tom !</h1>
-        <p class="fade-in-slide-up">Découvrez des recettes faciles et rapides pour tous les goûts !</p>
-        <input aria-label="Recherche" autocomplete="off" placeholder="Rechercher..."
-            class="form-control mb-3 w-50 mx-auto fade-in-slide-up" name="query" type="text">
-        <ul class="nav nav-pills nav-fill gap-2 p-1 small rounded-5 shadow custom-nav" id="pillNav2" role="tablist">
-            <li class="nav-item" role="presentation">
-                <a href="index.html" class="nav-link active rounded-5 text-light" id="home-tab2" role="tab"
-                    aria-selected="true">Home</a>
-            </li>
-            <li class="nav-item" role="presentation">
-                <a href="./html/apropos.html" class="nav-link rounded-5 text-light" id="profile-tab2" role="tab"
-                    aria-selected="false">Profile</a>
-            </li>
-            <li class="nav-item" role="presentation">
-                <a href="./html/contact.html" class="nav-link rounded-5 text-light" id="contact-tab2" role="tab"
-                    aria-selected="false">Contact</a>
-            </li>
-        </ul>
-    </header>
-
-    <section id="recettes" class="container my-5">
-        <h2 class="fade-in-slide-up text-center mb-4">Nos recettes</h2>
-        <div class="row">
-            <div class="col-md-4 mb-4">
-                <div class="card fade-in-slide-up">
-                    <a href="recettes/recette1.html">
-                        <img src="./img/cookies.jpg" class="card-img-top" alt="Recette Cookies">
-                        <div class="card-body">
-                            <h5 class="card-title">Cookies au chocolat</h5>
-                            <p class="card-text">Des cookies fondants et riches en chocolat noir et pépites
-                                croustillantes.</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card fade-in-slide-up">
-                    <a href="recettes/recette2.html">
-                        <img src="./img/gateaux_cafe.jpg" class="card-img-top" alt="Recette Cookies">
-                        <div class="card-body">
-                            <h5 class="card-title">Gâteau au café et aux noix</h5>
-                            <p class="card-text">Des cookies fondants et riches en chocolat noir et pépites
-                                croustillantes.</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card fade-in-slide-up">
-                    <a href="recettes/recette1.html">
-                        <img src="./img/cookies.jpg" class="card-img-top" alt="Recette Cookies">
-                        <div class="card-body">
-                            <h5 class="card-title">Cookies au chocolat</h5>
-                            <p class="card-text">Des cookies fondants et riches en chocolat noir et pépites
-                                croustillantes.</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card fade-in-slide-up">
-                    <a href="recettes/recette1.html">
-                        <img src="./img/cookies.jpg" class="card-img-top" alt="Recette Cookies">
-                        <div class="card-body">
-                            <h5 class="card-title">Cookies au chocolat</h5>
-                            <p class="card-text">Des cookies fondants et riches en chocolat noir et pépites
-                                croustillantes.</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card fade-in-slide-up">
-                    <a href="recettes/recette1.html">
-                        <img src="./img/cookies.jpg" class="card-img-top" alt="Recette Cookies">
-                        <div class="card-body">
-                            <h5 class="card-title">Cookies au chocolat</h5>
-                            <p class="card-text">Des cookies fondants et riches en chocolat noir et pépites
-                                croustillantes.</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card fade-in-slide-up">
-                    <a href="recettes/recette1.html">
-                        <img src="./img/cookies.jpg" class="card-img-top" alt="Recette Cookies">
-                        <div class="card-body">
-                            <h5 class="card-title">Cookies au chocolat</h5>
-                            <p class="card-text">Des cookies fondants et riches en chocolat noir et pépites
-                                croustillantes.</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
+    <div class="content">
+        <img src="./img/chef (1).png" alt="Logo Tasty Tom" width="100" class="mb-3">
+        <h1>Site en travaux</h1>
+        <p>Nous travaillons actuellement sur une nouvelle version de Tasty Tom. Revenez bientôt pour découvrir nos recettes ! Ou cliquer sur le boutton pour y acceder</p>
+        <div class="spinner-border text-primary" role="status">
+            <span class="visually-hidden">Chargement...</span>
         </div>
-    </section>
-
-    <section id="recettes-populaires" class="container my-5 fade-in-slide-up">
-        <h2 class="text-center mb-4">Recettes populaires</h2>
-        <ul class="list-group">
-            <li class="list-group-item"><a href="recette1.html">Recette 1</a></li>
-            <li class="list-group-item"><a href="recette2.html">Recette 2</a></li>
-            <li class="list-group-item"><a href="recette3.html">Recette 3</a></li>
-        </ul>
-    </section>
-
-    <section id="a-propos" class="container my-5 fade-in-slide-up">
-        <h2 class="text-center mb-4">À Propos</h2>
-        <p class="text-center">Ce site vous propose une sélection de recettes faciles à préparer chez vous.</p>
-    </section>
-
-    <footer class="text-center py-4 fade-in">
-        <p>&copy; 2024 Tasty Tom. Tous droits réservés.</p>
-        <nav>
-            <ul class="list-inline">
-                <li class="list-inline-item"><a href="./html/contact.html">Contact</a></li>
-                <li class="list-inline-item"><a href="./html/apropos.html">À propos</a></li>
-            </ul>
-        </nav>
-    </footer>
-
-
-    <script src="./js/script.js"></script>
+        <a href="index2.html" class="btn btn-primary btn-access">Accéder au site</a>
+    </div>
 </body>
 
 </html>
