ise en place traveuax iconne

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site en travaux - Tasty Tom</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="shortcut icon" href="./img/chef.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/travaux-routiers.png" type="image/x-icon">
     <style>
         body {
             display: flex;
@@ -42,7 +42,7 @@
     <div class="content">
         <img src="./img/chef (1).png" alt="Logo Tasty Tom" width="100" class="mb-3">
         <h1>Site en travaux</h1>
-        <p>Nous travaillons actuellement sur une nouvelle version de Tasty Tom. Revenez bientôt pour découvrir nos recettes ! Ou cliquer sur le boutton pour y acceder</p>
+        <p>Nous travaillons actuellement sur une nouvelle version de Tasty Tom. Revenez bientôt pour découvrir nos recettes ! Ou cliquez sur le bouton pour y accéder.</p>
         <div class="spinner-border text-primary" role="status">
             <span class="visually-hidden">Chargement...</span>
         </div>
