--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <body>
     <div class="content">
-        <img src="./img/chef (1).png" alt="Logo Tasty Tom" width="100" class="mb-3">
+        <img src="./img/travaux-routiers.png" alt="Logo Tasty Tom" width="100" class="mb-3">
         <h1>Site en travaux</h1>
         <p>Nous travaillons actuellement sur une nouvelle version de Tasty Tom. Revenez bientôt pour découvrir nos recettes ! Ou cliquez sur le bouton pour y accéder.</p>
         <div class="spinner-border text-primary" role="status">
