corection beug lien

--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
             text-align: center;
             background-color: #f8f9fa;
         }
+
         h1 {
             font-size: 2.5rem;
             margin-bottom: 1rem;
         }
+
         p {
             font-size: 1.2rem;
             color: #6c757d;
         }
+
         .spinner-border {
             display: flex;
             width: 5rem;
@@ -32,6 +35,7 @@
             margin: 1.5rem auto;
             align-items: center;
         }
+
         .content {
             max-width: 400px;
         }
@@ -42,7 +46,8 @@
     <div class="content">
         <img src="./img/travaux-routiers.png" alt="Logo Tasty Tom" width="100" class="mb-3">
         <h1>Site en travaux</h1>
-        <p>Nous travaillons actuellement sur une nouvelle version de Tasty Tom. Revenez bientôt pour découvrir nos recettes ! Ou cliquez sur le bouton pour y accéder.</p>
+        <p>Nous travaillons actuellement sur une nouvelle version de Tasty Tom. Revenez bientôt pour découvrir nos
+            recettes ! Ou cliquez sur le bouton pour y accéder.</p>
         <div class="spinner-border text-primary" role="status">
             <span class="visually-hidden">Chargement...</span>
         </div>
