--- a/index2.html
+++ b/index2.html
@@ -55,8 +55,8 @@
                         <img src="./img/gateaux_cafe.jpg" class="card-img-top" alt="Recette Cookies">
                         <div class="card-body">
                             <h5 class="card-title">Gâteau au café et aux noix</h5>
-                            <p class="card-text">Des cookies fondants et riches en chocolat noir et pépites
-                                croustillantes.</p>
+                            <p class="card-text">Un délicieux gâteau au café, rehaussé de noix croquantes, parfait pour
+                                accompagner vos moments de détente.</p>
                         </div>
                     </a>
                 </div>
@@ -133,6 +133,11 @@
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="./html/contact.html">Contact</a></li>
                 <li class="list-inline-item"><a href="./html/apropos.html">À propos</a></li>
+                <li class="list-inline-item">
+                    <a href="https://www.instagram.com/tomi_cunningham/" target="_blank">
+                        <img src="./img/instagram.png" alt="Instagram" style="width: 24px; height: 24px;">
+                    </a>
+                </li>
             </ul>
         </nav>
     </footer>
