--- a/html/contact.html
+++ b/html/contact.html
@@ -30,7 +30,7 @@
                     aria-selected="false">Profile</a>
             </li>
             <li class="nav-item" role="presentation">
-                <a href="./html/contact.html" class="nav-link rounded-5 text-light" id="contact-tab2" role="tab"
+                <a href="contact.html" class="nav-link rounded-5 text-light" id="contact-tab2" role="tab"
                     aria-selected="false">Contact</a>
             </li>
         </ul>
@@ -58,8 +58,8 @@
         <p>&copy; 2024 Tasty Tom. Tous droits réservés.</p>
         <nav>
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="./html/contact.html">Contact</a></li>
-                <li class="list-inline-item"><a href="./html/apropos.html">À propos</a></li>
+                <li class="list-inline-item"><a href="contact.html">Contact</a></li>
+                <li class="list-inline-item"><a href="apropos.html">À propos</a></li>
             </ul>
         </nav>
     </footer>
