--- a/recettes/recette2.html
+++ b/recettes/recette2.html
@@ -24,11 +24,11 @@
                     aria-selected="true">Home</a>
             </li>
             <li class="nav-item" role="presentation">
-                <a href="URL_PROFILE" class="nav-link rounded-5 text-light" id="profile-tab2" role="tab"
+                <a href="../html/apropos.html" class="nav-link rounded-5 text-light" id="profile-tab2" role="tab"
                     aria-selected="false">Profile</a>
             </li>
             <li class="nav-item" role="presentation">
-                <a href="URL_CONTACT" class="nav-link rounded-5 text-light" id="contact-tab2" role="tab"
+                <a href="../html/contact.html" class="nav-link rounded-5 text-light" id="contact-tab2" role="tab"
                     aria-selected="false">Contact</a>
             </li>
         </ul>
