--- a/index2.html
+++ b/index2.html
@@ -63,10 +63,10 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card fade-in-slide-up">
-                    <a href="recettes/recette1.html">
-                        <img src="./img/cookies.jpg" class="card-img-top" alt="Recette Cookies">
+                    <a href="recettes/recette3.html">
+                        <img src="./img/cuckake_peche.jpeg" class="card-img-top" alt="Recette Cookies">
                         <div class="card-body">
-                            <h5 class="card-title">Cookies au chocolat</h5>
+                            <h5 class="card-title">Cupcakes à la pêche et au crumble de noisettes</h5>
                             <p class="card-text">Des cookies fondants et riches en chocolat noir et pépites
                                 croustillantes.</p>
                         </div>
