mise en page insta

--- a/html/contact.html
+++ b/html/contact.html
@@ -58,8 +58,13 @@
         <p>&copy; 2024 Tasty Tom. Tous droits réservés.</p>
         <nav>
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="contact.html">Contact</a></li>
-                <li class="list-inline-item"><a href="apropos.html">À propos</a></li>
+                <li class="list-inline-item"><a href="./html/contact.html">Contact</a></li>
+                <li class="list-inline-item"><a href="./html/apropos.html">À propos</a></li>
+                <li class="list-inline-item">
+                    <a href="https://www.instagram.com/tomi_cunningham/" target="_blank">
+                        <img src="../img/instagram.png" alt="Instagram" style="width: 24px; height: 24px;">
+                    </a>
+                </li>
             </ul>
         </nav>
     </footer>
