--- a/recettes/recette1.html
+++ b/recettes/recette1.html
@@ -74,13 +74,17 @@
             </div>
         </div>
     </section>
-
     <footer class="text-center py-4 fade-in">
         <p>&copy; 2024 Tasty Tom. Tous droits réservés.</p>
         <nav>
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="../html/contact.html">Contact</a></li>
-                <li class="list-inline-item"><a href="../html/apropos.html">À propos</a></li>
+                <li class="list-inline-item"><a href="./html/contact.html">Contact</a></li>
+                <li class="list-inline-item"><a href="./html/apropos.html">À propos</a></li>
+                <li class="list-inline-item">
+                    <a href="https://www.instagram.com/tomi_cunningham/" target="_blank">
+                        <img src="../img/instagram.png" alt="Instagram" style="width: 24px; height: 24px;">
+                    </a>
+                </li>
             </ul>
         </nav>
     </footer>
