--- a/html/apropos.html
+++ b/html/apropos.html
@@ -21,11 +21,11 @@
             class="form-control mb-3 w-50 mx-auto" name="query" type="text">
         <ul class="nav nav-pills nav-fill gap-2 p-1 small rounded-5 shadow custom-nav" id="pillNav2" role="tablist">
             <li class="nav-item" role="presentation">
-                <a href="../index.html" class="nav-link active rounded-5 text-light" id="home-tab2" role="tab"
+                <a href="../index.html" class="nav-link  rounded-5 text-light" id="home-tab2" role="tab"
                     aria-selected="true">Home</a>
             </li>
             <li class="nav-item" role="presentation">
-                <a href="apropos.html" class="nav-link rounded-5 text-light" id="profile-tab2" role="tab"
+                <a href="apropos.html" class="nav-pills active nav-link rounded-5 text-light" id="profile-tab2" role="tab"
                     aria-selected="false">Profile</a>
             </li>
             <li class="nav-item" role="presentation">
@@ -35,7 +35,6 @@
         </ul>
     </header>
 
-    <!-- Section "À propos" -->
     <section class="container my-5">
         <div class="row justify-content-center">
             <div class="col-md-8 text-center">
