--- a/html/contact.html
+++ b/html/contact.html
@@ -4,33 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contactez-nous | Tomiamiam</title>
-    <!-- Lien vers Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <title>À propos | Tasty Tom</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../img/chef.ico" type="image/x-icon">
-
 </head>
 
 <body>
     <header>
         <a href="../index.html"><img class="iconepricibale" src="../img/chef (1).png" alt="Logo du site"></a>
-        <img src="../img/mode-sombre.png" alt="mode sombre" id="icon" class="mb-2 fade-in">
-        <h1>Contactez-nous !</h1>
+        <img src="../img/mode-sombre.png" alt="mode sombre" id="icon" class="">
+        <h1>À propos de Tasty Tom</h1>
         <p>Bienvenue dans l'univers des saveurs maison !</p>
         <input aria-label="Recherche" autocomplete="off" placeholder="Rechercher..."
-            class="form-control mb-3 w-50 mx-auto " name="query" type="text">
+            class="form-control mb-3 w-50 mx-auto" name="query" type="text">
         <ul class="nav nav-pills nav-fill gap-2 p-1 small rounded-5 shadow custom-nav" id="pillNav2" role="tablist">
             <li class="nav-item" role="presentation">
-                <a href="../index.html" class="nav-link active rounded-5 text-light" id="home-tab2" role="tab"
+                <a href="../index.html" class="nav-link  rounded-5 text-light" id="home-tab2" role="tab"
                     aria-selected="true">Home</a>
             </li>
             <li class="nav-item" role="presentation">
-                <a href="./apropos.html" class="nav-link rounded-5 text-light" id="profile-tab2" role="tab"
+                <a href="apropos.html" class="nav-pills  nav-link rounded-5 text-light" id="profile-tab2" role="tab"
                     aria-selected="false">Profile</a>
             </li>
             <li class="nav-item" role="presentation">
-                <a href="contact.html" class="nav-link rounded-5 text-light" id="contact-tab2" role="tab"
+                <a href="contact.html" class="nav-link active rounded-5 text-light" id="contact-tab2" role="tab"
                     aria-selected="false">Contact</a>
             </li>
         </ul>
