changement de page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="spinner-border text-primary" role="status">
             <span class="visually-hidden">Chargement...</span>
         </div>
-        <a href="index2.html" class="btn btn-primary btn-access">Accéder au site</a>
+        <a href="teste.html" class="btn btn-primary btn-access">Accéder au site</a>
     </div>
 </body>
 
