--- a/html/apropos.html
+++ b/html/apropos.html
@@ -4,73 +4,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>À propos | Tasty Tom</title>
+    <title>À propos - Tom Tasty</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/css/style2.css">
     <link rel="shortcut icon" href="../img/chef.ico" type="image/x-icon">
 </head>
 
 <body>
-
-    <header>
-        <a href="../index.html"><img class="iconepricibale" src="../img/chef (1).png" alt="Logo du site"></a>
-        <img src="../img/mode-sombre.png" alt="mode sombre" id="icon" class="">
-        <h1>À propos de Tasty Tom</h1>
-        <p>Bienvenue dans l'univers des saveurs maison !</p>
-        <input aria-label="Recherche" autocomplete="off" placeholder="Rechercher..."
-            class="form-control mb-3 w-50 mx-auto" name="query" type="text">
-        <ul class="nav nav-pills nav-fill gap-2 p-1 small rounded-5 shadow custom-nav" id="pillNav2" role="tablist">
-            <li class="nav-item" role="presentation">
-                <a href="../index.html" class="nav-link  rounded-5 text-light" id="home-tab2" role="tab"
-                    aria-selected="true">Home</a>
-            </li>
-            <li class="nav-item" role="presentation">
-                <a href="apropos.html" class="nav-pills active nav-link rounded-5 text-light" id="profile-tab2" role="tab"
-                    aria-selected="false">Profile</a>
-            </li>
-            <li class="nav-item" role="presentation">
-                <a href="contact.html" class="nav-link rounded-5 text-light" id="contact-tab2" role="tab"
-                    aria-selected="false">Contact</a>
-            </li>
+    <!-- Sidebar -->
+    <div class="sidebar">
+        <h2>Tom Tasty</h2>
+        <ul>
+            <li><a href="../index.html">Accueil</a></li>
+            <li><a href="../toutesRecette.html">Toutes les recettes</a></li>
+            <li><a href="../categorie.html">Catégories</a></li>
+            <li class="active"><a href="apropos.html">À propos</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
-    </header>
-
-    <section class="container my-5">
-        <div class="row justify-content-center">
-            <div class="col-md-8 text-center">
-                <p class="fs-5"><strong>Bienvenue dans l'univers de Tasty Tom !</strong><br><br>
-                    Chez Tasty Tom, chaque recette raconte une histoire de saveurs, de simplicité et de partage. Né
-                    d'une passion profonde pour la cuisine, notre site s'adresse à tous ceux qui veulent rendre chaque
-                    repas unique et mémorable, qu'ils soient novices ou chefs confirmés. Nous croyons que la cuisine
-                    doit être accessible, amusante et savoureuse. Avec des recettes variées, allant des classiques
-                    réconfortants aux nouvelles créations, Tasty Tom vous inspire pour chaque occasion et vous
-                    accompagne dans vos aventures culinaires.
-                    <br><br>
-                    <em>Rejoignez-nous dans cette exploration gastronomique et faites de chaque bouchée un vrai moment
-                        de plaisir. Bon appétit !</em>
-                </p>
-            </div>
+        <div class="delivery">
+            <p>Create Your Recipe</p>
+            <a href="creationRecette.html">Start Here</a>
         </div>
-    </section>
+    </div>
 
-    <footer class="text-center py-4 fade-in">
-        <p>&copy; 2024 Tasty Tom. Tous droits réservés.</p>
-        <nav>
+    <!-- Main content -->
+    <div class="main">
+        <header class="text-center mb-4">
+            <h1>À propos de Tom Tasty</h1>
+            <p>Notre mission : offrir des recettes simples et délicieuses pour tous.</p>
+        </header>
+
+        <section class="container mb-5">
+            <h2>Qui sommes-nous ?</h2>
+            <p>Tom Tasty est une plateforme dédiée aux passionnés de cuisine, offrant des recettes variées allant des
+                desserts aux plats principaux, en passant par les snacks et boissons. Nous croyons en la simplicité et
+                la convivialité dans la cuisine, avec des ingrédients accessibles et des préparations faciles à suivre.
+            </p>
+        </section>
+
+        <section class="container mb-5">
+            <h2>Notre équipe</h2>
+            <p>Nous sommes une petite équipe de passionnés de cuisine, dirigée par Tom, un chef autodidacte qui aime
+                expérimenter et partager ses découvertes culinaires avec le monde.</p>
+        </section>
+
+        <footer class="text-center py-4 bg-dark text-white">
+            <p>&copy; 2024 Tasty Tom. Tous droits réservés.</p>
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="./html/contact.html">Contact</a></li>
-                <li class="list-inline-item"><a href="./html/apropos.html">À propos</a></li>
+                <li class="list-inline-item"><a href="contact.html" class="text-white">Contact</a></li>
+                <li class="list-inline-item"><a href="apropos.html" class="text-white">À propos</a></li>
                 <li class="list-inline-item">
                     <a href="https://www.instagram.com/tomi_cunningham/" target="_blank">
                         <img src="../img/instagram.png" alt="Instagram" style="width: 24px; height: 24px;">
                     </a>
                 </li>
             </ul>
-        </nav>
-    </footer>
+        </footer>
+    </div>
 
-    <!-- Bootstrap JavaScript -->
     <script src="../js/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5..0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
