--- a/html/contact.html
+++ b/html/contact.html
@@ -4,68 +4,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>À propos | Tasty Tom</title>
+    <title>Contact - Tom Tasty</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/css/style2.css">
     <link rel="shortcut icon" href="../img/chef.ico" type="image/x-icon">
 </head>
 
 <body>
-    <header>
-        <a href="../index.html"><img class="iconepricibale" src="../img/chef (1).png" alt="Logo du site"></a>
-        <img src="../img/mode-sombre.png" alt="mode sombre" id="icon" class="">
-        <h1>À propos de Tasty Tom</h1>
-        <p>Bienvenue dans l'univers des saveurs maison !</p>
-        <input aria-label="Recherche" autocomplete="off" placeholder="Rechercher..."
-            class="form-control mb-3 w-50 mx-auto" name="query" type="text">
-        <ul class="nav nav-pills nav-fill gap-2 p-1 small rounded-5 shadow custom-nav" id="pillNav2" role="tablist">
-            <li class="nav-item" role="presentation">
-                <a href="../index.html" class="nav-link  rounded-5 text-light" id="home-tab2" role="tab"
-                    aria-selected="true">Home</a>
-            </li>
-            <li class="nav-item" role="presentation">
-                <a href="apropos.html" class="nav-pills  nav-link rounded-5 text-light" id="profile-tab2" role="tab"
-                    aria-selected="false">Profile</a>
-            </li>
-            <li class="nav-item" role="presentation">
-                <a href="contact.html" class="nav-link active rounded-5 text-light" id="contact-tab2" role="tab"
-                    aria-selected="false">Contact</a>
-            </li>
+    <!-- Sidebar -->
+    <div class="sidebar">
+        <h2>Tom Tasty</h2>
+        <ul>
+            <li><a href="../index.html">Accueil</a></li>
+            <li><a href="../toutesRecette.html">Toutes les recettes</a></li>
+            <li><a href="../categorie.html">Catégories</a></li>
+            <li><a href="apropos.html">À propos</a></li>
+            <li class="active"><a href="contact.html">Contact</a></li>
         </ul>
-    </header>
-    <section class="contact-section container">
-        <br>
-        <p>Pour toute question, suggestion ou remarque, veuillez nous contacter en utilisant le formulaire ci-dessous :
-        </p>
-        <hr>
-        <form action="#" method="POST" class="form-group">
-            <label for="nom">Nom :</label>
-            <input type="text" id="nom" name="nom" class="form-control" required>
+        <div class="delivery">
+            <p>Create Your Recipe</p>
+            <a href="creationRecette.html">Start Here</a>
+        </div>
+    </div>
 
-            <label for="email" class="mt-2">Email :</label>
-            <input type="email" id="email" name="email" class="form-control" required>
+    <!-- Main content -->
+    <div class="main">
+        <header class="text-center mb-4">
+            <h1>Contactez-nous</h1>
+            <p>Vous avez des questions ou des suggestions ? N'hésitez pas à nous contacter.</p>
+        </header>
 
-            <label for="message" class="mt-2">Message :</label>
-            <textarea id="message" name="message" rows="5" class="form-control" required></textarea>
+        <section class="container mb-5">
+            <h2>Formulaire de Contact</h2>
+            <form action="#" method="POST">
+                <div class="mb-3">
+                    <label for="name" class="form-label">Nom</label>
+                    <input type="text" class="form-control" id="name" name="name" required>
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" name="email" required>
+                </div>
+                <div class="mb-3">
+                    <label for="message" class="form-label">Message</label>
+                    <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Envoyer</button>
+            </form>
+        </section>
 
-            <button type="submit" class="btn btn-primary mt-3">Envoyer</button>
-        </form>
-    </section>
+        <section class="container mb-5">
+            <h2>Suivez-nous</h2>
+            <p>Vous pouvez également nous suivre sur nos réseaux sociaux :</p>
+            <ul>
+                <li><a href="https://www.instagram.com/tomi_cunningham/" target="_blank">
+                        <img src="../img/instagram.png" alt="Instagram" style="width: 24px; height: 24px;"> Instragram
+                    </a></li>
+            </ul>
+        </section>
 
-    <footer class="text-center py-4 fade-in">
-        <p>&copy; 2024 Tasty Tom. Tous droits réservés.</p>
-        <nav>
+        <footer class="text-center py-4 bg-dark text-white">
+            <p>&copy; 2024 Tasty Tom. Tous droits réservés.</p>
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="./html/contact.html">Contact</a></li>
-                <li class="list-inline-item"><a href="./html/apropos.html">À propos</a></li>
+                <li class="list-inline-item"><a href="contact.html" class="text-white"> Contact</a></li>
+                <li class="list-inline-item"><a href="apropos.html" class="text-white">À propos</a></li>
                 <li class="list-inline-item">
                     <a href="https://www.instagram.com/tomi_cunningham/" target="_blank">
                         <img src="../img/instagram.png" alt="Instagram" style="width: 24px; height: 24px;">
                     </a>
                 </li>
             </ul>
-        </nav>
-    </footer>
+        </footer>
+    </div>
 
     <script src="../js/script.js"></script>
 </body>
