mis e en place du mode sonmbre

--- a/categorie.html
+++ b/categorie.html
@@ -27,10 +27,13 @@
     </div>
 
     <div class="main">
-        <header class="text-center mb-4">
+        <header class="fade-in-slide-up text-center mb-4">
             <a href="index.html"><img class="iconepricibale" src="./img/chef (1).png" alt="Logo du site"></a>
-            <h1>Découvrez nos Catégories</h1>
-            <p>Parcourez les recettes par catégorie</p>
+            <img src="./img/mode-sombre.png" alt="mode sombre" id="icon" class="mb-2 fade-in">
+            <h1 class="fade-in-slide-up">Bienvenue sur Tasty Tom !</h1>
+            <p class="fade-in-slide-up">Découvrez des recettes faciles et rapides pour tous les goûts !</p>
+            <input aria-label="Recherche" autocomplete="off" placeholder="Rechercher..."
+                class="form-control mb-3 w-50 mx-auto fade-in-slide-up" name="query" type="text">
         </header>
 
         <section id="categories" class="container my-5">
