--- a/toutesRecette.html
+++ b/toutesRecette.html
@@ -27,12 +27,13 @@
     </div>
 
     <div class="main">
-        <header class="text-center mb-4">
+        <header class="fade-in-slide-up text-center mb-4">
             <a href="index.html"><img class="iconepricibale" src="./img/chef (1).png" alt="Logo du site"></a>
-            <h1>Bienvenue sur Tasty Tom</h1>
-            <p>Explorez nos délicieuses recettes !</p>
-            <input aria-label="Recherche" autocomplete="off" placeholder="Rechercher une recette..."
-                class="form-control mb-3 w-50 mx-auto" name="query" type="text">
+            <img src="./img/mode-sombre.png" alt="mode sombre" id="icon" class="mb-2 fade-in">
+            <h1 class="fade-in-slide-up">Bienvenue sur Tasty Tom !</h1>
+            <p class="fade-in-slide-up">Découvrez des recettes faciles et rapides pour tous les goûts !</p>
+            <input aria-label="Recherche" autocomplete="off" placeholder="Rechercher..."
+                class="form-control mb-3 w-50 mx-auto fade-in-slide-up" name="query" type="text">
         </header>
 
         <section id="recettes" class="container my-5">
