--- a/recettes/recette1.html
+++ b/recettes/recette1.html
@@ -6,33 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cookies au Chocolat</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style2.css">
     <link rel="shortcut icon" href="../img/chef.ico" type="image/x-icon">
 </head>
 
 <body>
-    <header>
-        <a href="#"><img class="iconepricibale" src="../img/chef (1).png" alt="Logo du site"></a>
-        <img src="../img/mode-sombre.png" alt="mode sombre" id="icon" class="">
-        <h1>Cookies au Chocolat !</h1>
-        <p>Découvrez des recettes faciles et rapides pour tous les goûts !</p>
+
+  
+    <header class="text-center mb-4">
+        <a href="../index.html"><img class="iconepricibale" src="../img/chef (1).png" alt="Logo du site"></a>
+        <img src="../img/mode-sombre.png" alt="mode sombre" id="icon" class="mb-2 ">
+        <h1 class="">Cookies au Chocolat</h1>
+        <p class="">Découvrez des recettes faciles et rapides pour tous les goûts !</p>
         <input aria-label="Recherche" autocomplete="off" placeholder="Rechercher..."
             class="form-control mb-3 w-50 mx-auto " name="query" type="text">
-        <ul class="nav nav-pills nav-fill gap-2 p-1 small rounded-5 shadow custom-nav" id="pillNav2" role="tablist">
-            <li class="nav-item" role="presentation">
-                <a href="../index.html" class="nav-link active rounded-5 text-light" id="home-tab2" role="tab"
-                    aria-selected="true">Home</a>
-            </li>
-            <li class="nav-item" role="presentation">
-                <a href="../html/apropos.html" class="nav-link rounded-5 text-light" id="profile-tab2" role="tab"
-                    aria-selected="false">Profile</a>
-            </li>
-            <li class="nav-item" role="presentation">
-                <a href="../html/contact.html" class="nav-link rounded-5 text-light" id="contact-tab2" role="tab"
-                    aria-selected="false">Contact</a>
-            </li>
-        </ul>
     </header>
+
 
     <section class="recette container recette-detail py-4">
         <div class="row">
@@ -53,33 +42,33 @@
                     <li class="list-group-item">• Une pincée de sel</li>
                     <li class="list-group-item">• 100g de pépites de chocolat (ou plus selon tes préférences)</li>
                 </ul>
-
-                <h2 class="h4">Instructions :</h2>
-                <ol class="list-group list-group-numbered">
-                    <li class="list-group-item">Préchauffe ton four à 180°C (chaleur tournante).</li>
-                    <li class="list-group-item">Dans un grand bol, mélange le beurre, le sucre brun et le sucre blanc
-                        jusqu’à obtenir une consistance crémeuse.</li>
-                    <li class="list-group-item">Ajoute l’œuf et l’extrait de vanille, et mélange bien.</li>
-                    <li class="list-group-item">Dans un autre bol, combine la farine, la levure chimique, le bicarbonate
-                        de soude et le sel. Incorpore ces ingrédients secs au mélange humide.</li>
-                    <li class="list-group-item">Ajoute les pépites de chocolat et mélange jusqu’à ce qu’elles soient
-                        bien réparties.</li>
-                    <li class="list-group-item">Dépose des cuillerées de pâte sur une plaque de cuisson recouverte de
-                        papier sulfurisé, en laissant suffisamment d’espace entre chaque cookie.</li>
-                    <li class="list-group-item">Enfourne pendant environ 10-12 minutes, ou jusqu’à ce que les bords
-                        soient dorés mais que le centre soit encore légèrement mou.</li>
-                    <li class="list-group-item">Laisse les cookies refroidir quelques minutes sur la plaque avant de les
-                        transférer sur une grille pour refroidir complètement.</li>
-                </ol>
             </div>
+            <h2 class="h4">Instructions :</h2>
+            <ol class="list-group list-group-numbered">
+                <li class="list-group-item">Préchauffe ton four à 180°C (chaleur tournante).</li>
+                <li class="list-group-item">Dans un grand bol, mélange le beurre, le sucre brun et le sucre blanc
+                    jusqu’à obtenir une consistance crémeuse.</li>
+                <li class="list-group-item">Ajoute l’œuf et l’extrait de vanille, et mélange bien.</li>
+                <li class="list-group-item">Dans un autre bol, combine la farine, la levure chimique, le bicarbonate
+                    de soude et le sel. Incorpore ces ingrédients secs au mélange humide.</li>
+                <li class="list-group-item">Ajoute les pépites de chocolat et mélange jusqu’à ce qu’elles soient
+                    bien réparties.</li>
+                <li class="list-group-item">Dépose des cuillerées de pâte sur une plaque de cuisson recouverte de
+                    papier sulfurisé, en laissant suffisamment d’espace entre chaque cookie.</li>
+                <li class="list-group-item">Enfourne pendant environ 10-12 minutes, ou jusqu’à ce que les bords
+                    soient dorés mais que le centre soit encore légèrement mou.</li>
+                <li class="list-group-item">Laisse les cookies refroidir quelques minutes sur la plaque avant de les
+                    transférer sur une grille pour refroidir complètement.</li>
+            </ol>
+        </div>
         </div>
     </section>
-    <footer class="text-center py-4 fade-in">
+    <footer class="text-center py-4 ">
         <p>&copy; 2024 Tasty Tom. Tous droits réservés.</p>
         <nav>
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="./html/contact.html">Contact</a></li>
-                <li class="list-inline-item"><a href="./html/apropos.html">À propos</a></li>
+                <li class="list-inline-item"><a href="../html/contact.html">Contact</a></li>
+                <li class="list-inline-item"><a href="../html/apropos.html">À propos</a></li>
                 <li class="list-inline-item">
                     <a href="https://www.instagram.com/tomi_cunningham/" target="_blank">
                         <img src="../img/instagram.png" alt="Instagram" style="width: 24px; height: 24px;">
