--- a/recettes/recette3.html
+++ b/recettes/recette3.html
@@ -60,42 +60,42 @@
                     <li class="list-group-item">• 50g de sucre roux</li>
                     <li class="list-group-item">• 50g de beurre froid, coupé en petits cubes</li>
                 </ul>
-
-                <h2 class="h4">Instructions :</h2>
-                <ol class="list-group list-group-numbered">
-                    <li class="list-group-item">Préchauffe le four à 180°C (chaleur tournante).
-                    </li>
-                    <li class="list-group-item">Mélange la farine, la levure et le sucre dans un bol.</li>
-                    <li class="list-group-item">Dans un autre bol, bats les œufs avec le beurre fondu, le lait et
-                        l’extrait de vanille.</li>
-                    <li class="list-group-item">Incorpore les ingrédients secs dans le mélange humide, puis ajoute les
-                        dés de pêche.</li>
-                    <li class="list-group-item">Répartis la pâte dans des moules à cupcakes.
-                    </li>
-                    <li class="list-group-item">Dans un bol, mélange les noisettes concassées, la farine et le sucre
-                        roux.</li>
-                    <li class="list-group-item">Ajoute le beurre froid et travaille-le avec les doigts jusqu’à obtenir
-                        une consistance sablonneuse.</li>
-                    <li class="list-group-item">Parseme ce crumble sur chaque cupcake.</li>
-                    <li class="list-group-item">Enfourne les cupcakes pour environ 20-25 minutes, ou jusqu’à ce qu’ils
-                        soient bien dorés et qu’un cure-dent en ressorte propre.</li>
-                    <li class="list-group-item">Laisse les cupcakes refroidir sur une grille avant de les déguster.</li>
-                </ol>
-
-                <h2 class="h4">Conseils :</h2>
-                <ul class="list-group list-group-flush mb-4">
-                    <li class="list-group-item">• Utilisez des noix de qualité pour un goût encore plus savoureux.</li>
-                    <li class="list-group-item">• Vous pouvez ajouter des pépites de chocolat pour plus de gourmandise.
-                    </li>
-                    <li class="list-group-item">• Veillez à bien ne pas trop cuire les gâteaux, sinon ils risquent
-                        d'être secs.</li>
-                    <li class="list-group-item">• Laissez bien refroidir les gâteaux avant de les garnir pour que la
-                        crème ne fonde pas.</li>
-                    <li class="list-group-item">• Si vous n'avez pas d'essence de café, vous pouvez la remplacer par du
-                        café instantané bien fort.</li>
-                </ul>
-
             </div>
+            <h2 class="h4">Instructions :</h2>
+            <ol class="list-group list-group-numbered">
+                <li class="list-group-item">Préchauffe le four à 180°C (chaleur tournante).
+                </li>
+                <li class="list-group-item">Mélange la farine, la levure et le sucre dans un bol.</li>
+                <li class="list-group-item">Dans un autre bol, bats les œufs avec le beurre fondu, le lait et
+                    l’extrait de vanille.</li>
+                <li class="list-group-item">Incorpore les ingrédients secs dans le mélange humide, puis ajoute les
+                    dés de pêche.</li>
+                <li class="list-group-item">Répartis la pâte dans des moules à cupcakes.
+                </li>
+                <li class="list-group-item">Dans un bol, mélange les noisettes concassées, la farine et le sucre
+                    roux.</li>
+                <li class="list-group-item">Ajoute le beurre froid et travaille-le avec les doigts jusqu’à obtenir
+                    une consistance sablonneuse.</li>
+                <li class="list-group-item">Parseme ce crumble sur chaque cupcake.</li>
+                <li class="list-group-item">Enfourne les cupcakes pour environ 20-25 minutes, ou jusqu’à ce qu’ils
+                    soient bien dorés et qu’un cure-dent en ressorte propre.</li>
+                <li class="list-group-item">Laisse les cupcakes refroidir sur une grille avant de les déguster.</li>
+            </ol>
+
+            <h2 class="h4">Conseils :</h2>
+            <ul class="list-group list-group-flush mb-4">
+                <li class="list-group-item">• Utilisez des noix de qualité pour un goût encore plus savoureux.</li>
+                <li class="list-group-item">• Vous pouvez ajouter des pépites de chocolat pour plus de gourmandise.
+                </li>
+                <li class="list-group-item">• Veillez à bien ne pas trop cuire les gâteaux, sinon ils risquent
+                    d'être secs.</li>
+                <li class="list-group-item">• Laissez bien refroidir les gâteaux avant de les garnir pour que la
+                    crème ne fonde pas.</li>
+                <li class="list-group-item">• Si vous n'avez pas d'essence de café, vous pouvez la remplacer par du
+                    café instantané bien fort.</li>
+            </ul>
+
+        </div>
         </div>
     </section>
 
