--- a/recettes/recette2.html
+++ b/recettes/recette2.html
@@ -59,46 +59,46 @@
                     <li class="list-group-item">• 2 cuillères à café d'essence de café</li>
                     <li class="list-group-item">• 2 cuillères à café de lait</li>
                 </ul>
-
-                <h2 class="h4">Instructions :</h2>
-                <ol class="list-group list-group-numbered">
-                    <li class="list-group-item">Graisser deux moules à gâteau de 18 cm de diamètre et tapisser les fonds
-                        de papier sulfurisé beurré.</li>
-                    <li class="list-group-item">Dans un bol, mettre la margarine, le sucre, les œufs, les noix hachées
-                        et l'essence de café. Tamiser la farine, le sel et la levure chimique par-dessus. Mélanger tous
-                        les ingrédients avec une cuillère en bois pendant 2-3 minutes jusqu'à ce que la préparation soit
-                        bien homogène.</li>
-                    <li class="list-group-item">Diviser la pâte dans les moules préparés, lisser la surface, puis
-                        cuire au centre du four préchauffé à 160°C (thermostat 3) pendant 35-40 minutes, ou jusqu'à ce
-                        que le gâteau soit bien gonflé et rebondisse au toucher.</li>
-                    <li class="list-group-item">Une fois cuits, démouler les gâteaux sur une grille et laisser refroidir
-                        avant de retirer le papier sulfurisé.</li>
-                    <li class="list-group-item">Pendant ce temps, préparer la garniture : battre la margarine, le sucre
-                        glace tamisé, le lait et l'essence de café dans un bol jusqu'à ce que la préparation soit lisse.
-                    </li>
-                    <li class="list-group-item">Coller les deux gâteaux ensemble avec les deux tiers de la garniture.
-                        Recouvrir le dessus du gâteau avec le reste de la garniture et décorer en traçant un motif
-                        décoratif avec une fourchette. Ajouter les noix entières sur le dessus.</li>
-                </ol>
-
-                <h2 class="h4">Conseils :</h2>
-                <ul class="list-group list-group-flush mb-4">
-                    <li class="list-group-item">• Utilisez des noix de qualité pour un goût encore plus savoureux.</li>
-                    <li class="list-group-item">• Vous pouvez ajouter des pépites de chocolat pour plus de gourmandise.
-                    </li>
-                    <li class="list-group-item">• Veillez à bien ne pas trop cuire les gâteaux, sinon ils risquent
-                        d'être secs.</li>
-                    <li class="list-group-item">• Laissez bien refroidir les gâteaux avant de les garnir pour que la
-                        crème ne fonde pas.</li>
-                    <li class="list-group-item">• Si vous n'avez pas d'essence de café, vous pouvez la remplacer par du
-                        café instantané bien fort.</li>
-                </ul>
-
             </div>
+            <h2 class="h4">Instructions :</h2>
+            <ol class="list-group list-group-numbered">
+                <li class="list-group-item">Graisser deux moules à gâteau de 18 cm de diamètre et tapisser les fonds
+                    de papier sulfurisé beurré.</li>
+                <li class="list-group-item">Dans un bol, mettre la margarine, le sucre, les œufs, les noix hachées
+                    et l'essence de café. Tamiser la farine, le sel et la levure chimique par-dessus. Mélanger tous
+                    les ingrédients avec une cuillère en bois pendant 2-3 minutes jusqu'à ce que la préparation soit
+                    bien homogène.</li>
+                <li class="list-group-item">Diviser la pâte dans les moules préparés, lisser la surface, puis
+                    cuire au centre du four préchauffé à 160°C (thermostat 3) pendant 35-40 minutes, ou jusqu'à ce
+                    que le gâteau soit bien gonflé et rebondisse au toucher.</li>
+                <li class="list-group-item">Une fois cuits, démouler les gâteaux sur une grille et laisser refroidir
+                    avant de retirer le papier sulfurisé.</li>
+                <li class="list-group-item">Pendant ce temps, préparer la garniture : battre la margarine, le sucre
+                    glace tamisé, le lait et l'essence de café dans un bol jusqu'à ce que la préparation soit lisse.
+                </li>
+                <li class="list-group-item">Coller les deux gâteaux ensemble avec les deux tiers de la garniture.
+                    Recouvrir le dessus du gâteau avec le reste de la garniture et décorer en traçant un motif
+                    décoratif avec une fourchette. Ajouter les noix entières sur le dessus.</li>
+            </ol>
+
+            <h2 class="h4">Conseils :</h2>
+            <ul class="list-group list-group-flush mb-4">
+                <li class="list-group-item">• Utilisez des noix de qualité pour un goût encore plus savoureux.</li>
+                <li class="list-group-item">• Vous pouvez ajouter des pépites de chocolat pour plus de gourmandise.
+                </li>
+                <li class="list-group-item">• Veillez à bien ne pas trop cuire les gâteaux, sinon ils risquent
+                    d'être secs.</li>
+                <li class="list-group-item">• Laissez bien refroidir les gâteaux avant de les garnir pour que la
+                    crème ne fonde pas.</li>
+                <li class="list-group-item">• Si vous n'avez pas d'essence de café, vous pouvez la remplacer par du
+                    café instantané bien fort.</li>
+            </ul>
+
+        </div>
         </div>
     </section>
 
-    <footer class="text-center py-4 fade-in">
+    <footer class="text-center py-4 ">
         <p>&copy; 2024 Tasty Tom. Tous droits réservés.</p>
         <nav>
             <ul class="list-inline">
