mise en place du site

--- a/index.html
+++ b/index.html
@@ -4,55 +4,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site en travaux - Tasty Tom</title>
+    <title>Les recettes de Tasty Tom</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="shortcut icon" href="./img/travaux-routiers.png" type="image/x-icon">
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            text-align: center;
-            background-color: #f8f9fa;
-        }
-
-        h1 {
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-        }
-
-        p {
-            font-size: 1.2rem;
-            color: #6c757d;
-        }
-
-        .spinner-border {
-            display: flex;
-            width: 5rem;
-            height: 5rem;
-            margin: 1.5rem auto;
-            align-items: center;
-        }
-
-        .content {
-            max-width: 400px;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/style2.css">
+    <link rel="shortcut icon" href="./img/chef.ico" type="image/x-icon">
 </head>
 
 <body>
-    <div class="content">
-        <img src="./img/travaux-routiers.png" alt="Logo Tasty Tom" width="100" class="mb-3">
-        <h1>Site en travaux</h1>
-        <p>Nous travaillons actuellement sur une nouvelle version de Tasty Tom. Revenez bientôt pour découvrir nos
-            recettes ! Ou cliquez sur le bouton pour y accéder.</p>
-        <div class="spinner-border text-primary" role="status">
-            <span class="visually-hidden">Chargement...</span>
+    <div class="sidebar">
+        <h2>Tom Tasty</h2>
+        <ul>
+            <li class="active"><a href="index.html">Accueil</a></li>
+            <li><a href="toutesRecette.html">Toutes les recettes</a></li>
+            <li><a href="categorie.html">Catégories</a></li>
+            <li><a href="html/apropos.html">À propos</a></li>
+            <li><a href="html/contact.html">Contact</a></li>
+        </ul>
+        <div class="delivery">
+            <p>Create Your Recipe</p>
+            <a href="creationRecette.html">Start Here</a>
         </div>
-        <a href="teste.html" class="btn btn-primary btn-access">Accéder au site</a>
     </div>
+
+    <div class="main">
+        <header class="fade-in-slide-up text-center mb-4">
+            <a href="index.html"><img class="iconepricibale" src="./img/chef (1).png" alt="Logo du site"></a>
+            <img src="./img/mode-sombre.png" alt="mode sombre" id="icon" class="mb-2 fade-in">
+            <h1 class="fade-in-slide-up">Bienvenue sur Tasty Tom !</h1>
+            <p class="fade-in-slide-up">Découvrez des recettes faciles et rapides pour tous les goûts !</p>
+            <input aria-label="Recherche" autocomplete="off" placeholder="Rechercher..."
+                class="form-control mb-3 w-50 mx-auto fade-in-slide-up" name="query" type="text">
+        </header>
+
+        
+
+        <section id="recettes" class="container my-5 ">
+            <h2 class="text-center mb-4">Nos recettes</h2>
+            <div class="row ">
+                <!-- Card 1 -->
+                <div class="col-md-4 mb-4">
+                    <div class="card shadow-lg border-0 rounded">
+                        <a href="recettes/recette1.html">
+                            <img src="./img/cookies.jpg" class="card-img-top rounded-top" alt="Cookies au chocolat">
+                            <div class="card-body">
+                                <h5 class="card-title">Cookies au chocolat</h5>
+                                <p class="card-text">Des cookies fondants et riches en chocolat noir et pépites
+                                    croustillantes.</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <!-- Card 2 -->
+                <div class="col-md-4 mb-4">
+                    <div class="card shadow-lg border-0 rounded">
+                        <a href="recettes/recette2.html">
+                            <img src="./img/gateaux_cafe.jpg" class="card-img-top rounded-top" alt="Gâteau au café">
+                            <div class="card-body">
+                                <h5 class="card-title">Gâteau au café et aux noix</h5>
+                                <p class="card-text">Un délicieux gâteau au café, rehaussé de noix croquantes.</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <!-- Card 3 -->
+                <div class="col-md-4 mb-4">
+                    <div class="card shadow-lg border-0 rounded">
+                        <a href="recettes/recette3.html">
+                            <img src="./img/cuckake_peche.jpeg" class="card-img-top rounded-top"
+                                alt="Cupcakes à la pêche">
+                            <div class="card-body">
+                                <h5 class="card-title">Cupcakes à la pêche</h5>
+                                <p class="card-text">Des cupcakes moelleux à la pêche avec un crumble de noisettes.</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer class="text-center py-4 bg-dark text-white">
+            <p>&copy; 2024 Tasty Tom. Tous droits réservés.</p>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="./html/contact.html" class="text-white">Contact</a></li>
+                <li class="list-inline-item"><a href="./html/apropos.html" class="text-white">À propos</a></li>
+                <li class="list-inline-item">
+                    <a href="https://www.instagram.com/tomi_cunningham/" target="_blank">
+                        <img src="./img/instagram.png" alt="Instagram" style="width: 24px; height: 24px;">
+                    </a>
+                </li>
+            </ul>
+        </footer>
+    </div>
+
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
